--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,69 @@
 @import "tailwindcss";
 
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-heading: var(--font-poppins);
+  --font-body: var(--font-roboto);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-body), sans-serif; /* Default body text */
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-heading), sans-serif; /* Use Poppins for headings */
+  font-weight: 600; /* strong headings */
+}
+h2{
+  font-size: 35px;
+  font-weight: bold;
+}
+p{
+  color: #d1d5dc;
+  font-size: 18px;
+}
+.bg{
+  background: #0A0F2C;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+
+/* Primary Button (filled gradient) */
+.btn-primary {
+  background: linear-gradient(90deg, #1027fa, #0c0fcf);
+  color: #ffffff;
+  padding: 0.75rem 1.5rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
+  transition: all 0.3s ease-in-out;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: linear-gradient(90deg, #0c19cf, #4310fa);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(67, 16, 250, 0.5);
+}
+
+/* Secondary Button (transparent background, border) */
+.btn-secondary {
+  background: transparent;
+  color: #ffffff;
+  padding: 0.75rem 1.5rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
+  border: 2px solid #2710fa;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-secondary:hover {
+  background: rgba(32, 16, 250, 0.1);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(39, 16, 250, 0.3);
 }
