--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-heading), sans-serif; /* Use Poppins for headings */
   font-weight: 600; /* strong headings */
 }
-h2{
+/* h2{
   font-size: 35px;
   font-weight: bold;
-}
-p{
+} */
+/* p{
   color: #d1d5dc;
   font-size: 18px;
-}
+} */
 .bg{
   background: #0A0F2C;
 }
