--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 35px;
   font-weight: bold;
 } */
-/* p{
+p{
   color: #d1d5dc;
-  font-size: 18px;
-} */
+  /* font-size: 18px; */
+}
 .bg{
   background: #0A0F2C;
 }
